tests/compile_fail/into/tuple_too_short.stderr
error: wrong tuple length: expected 2, found 1. Consider adding 1 more type: `(i16, _)`
 --> tests/compile_fail/into/tuple_too_short.rs:2:8
  |
2 | #[into((i16,))]
  |        ^^^^^^
